--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     box-sizing:border-box;
+    max-width: 1600px;
 }
 body{
     background-image: url(image/hero-bg.png);
@@ -59,44 +60,31 @@ nav>span{
     box-sizing: border-box;
     overflow: hidden;
     border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    position: absolute;
     transform: translate(-50%, -50%);
+    margin-bottom: 30px;
     
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-@media screen and(max-width:425px) {
-    .menu-container{
-        display: none;
-    }
+.btn-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding: 12px 20px;
+    border-radius:10000px;
+    margin-top: 20px;
+}
+.banner-container{
+    color: rgba(255, 255, 255, 1);
+    
+    height: 100px;
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    text-align: center;
+    gap:15px;
+    margin-top: 50px;
     
 }
